--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,5 +9,8 @@ jetbrains-annotations = { module = "org.jetbrains:annotations", version = "26.0.
 junit-bom = { module = "org.junit:junit-bom", version.ref = "junit" }
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit" }
 junit-platform-launcher = { module = "org.junit.platform:junit-platform-launcher", version = "1.11.2" }
+byte-buddy = { module = "net.bytebuddy:byte-buddy", version = "1.17.5" }
+ow2-asm-asm = { module = "org.ow2.asm:asm", version = "9.8" }
+ow2-asm-util = { module = "org.ow2.asm:asm-util", version = "9.8" }
 
 [plugins]
